<resources>
    <!-- Application -->
    <string name="app_title">Grhatama Pustaka (Purwarupa)</string>
    <string name="app_name">MlibGTP (Purwarupa)</string>
    <string name="app_copyright">Badan Perpustakaan dan Arsip Daerah</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Drawer Menu -->
    <string name="action_login">Login &amp; Register</string>
    <string name="action_home">Home</string>
    <string name="action_track">Track</string>
    <string name="action_favourites">Favourites</string>
    <string name="nav_activity">Public Activity</string>
    <string name="action_popular">Popular</string>
    <string name="action_viewed">Viewed</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_likes">Likes</string>
    <string name="action_views">Views</string>
    <string name="nav_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_helps">Help &amp; Feedback</string>
    <!-- Track -->
    <string name="action_search">Search</string>
    <string name="action_search_simple">Simple</string>
    <string name="action_search_advance">Advanced</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="title_track">Track</string>
    <string name="title_registrasi">Registrasi</string>
    <string name="title_search">Search</string>
    <string name="title_search_result">Search Result</string>
    <string name="title_search_advance">Advanced</string>
    <string name="input_search_keyword">Keyword</string>
    <string name="input_search_category">Category</string>
    <string name="input_search_title">Title</string>
    <string name="input_search_author">Author</string>
    <string name="input_search_publisher">Publisher</string>
    <string name="input_search_publish_year">Publish Year</string>
    <string name="input_search_subject">Subject</string>
    <string name="input_search_callnumber">Call Number</string>
    <string name="input_search_bibid">BIBID</string>
    <string name="input_search_isbn">ISBN</string>
    <string name="msg_error">Terjadi masalah koneksi atau server sedang error. Tap untuk mencoba lagi.</string>

    <string name="confirm">Confirm</string>
    <string name="later">Later</string>
    <string name="repo_waiting">GitHub repo is waiting for your star!</string>
    <string name="rate_title">Rate the library!</string>
    <string name="rate_message">Your star won\'t change or influence anything (maybe will make me a bit happier).</string>
    <string name="text_input_title">Type your name</string>
    <string name="text_input_message">Input must match \\\\w+ or dialog won\'t accept it. That is because TextFilter object is set.</string>
    <string name="text_input_error_message">I told you. Please type something correct.</string>

</resources>
