<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_login" />
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_track"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_track" />
        <item
            android:id="@+id/nav_track_favourite"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/action_favourites" />
        <item
            android:id="@+id/nav_popular"
            android:title="@string/action_popular" />
        <item
            android:id="@+id/nav_views"
            android:title="@string/action_views" />
        <item
            android:id="@+id/nav_bookmarks"
            android:title="@string/action_bookmarks" />
        <item
            android:id="@+id/nav_likes"
            android:title="@string/action_likes" />
        <item
            android:id="@+id/nav_favourites"
            android:title="@string/action_favourites" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_helps"
            android:title="@string/action_helps" />
    </group>

</menu>
